<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTextViewDayTimes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/button_query_days" />

        <RadioGroup
            android:id="@+id/idRadioGroupQueryRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/idRadioButton1week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/button_query_week" />

            <RadioButton
                android:id="@+id/idRadioButton1month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/button_query_months" />

            <RadioButton
                android:id="@+id/idRadioButton3month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_query_3months" />

            <RadioButton
                android:id="@+id/idRadioButton6month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_query_6months" />

            <RadioButton
                android:id="@+id/idRadioButton1year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/button_query_year" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/idButtonQueryList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_query_do" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerViewId"
        android:name="com.changda123.www.mycfo.ListRecordFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Account.RecordList.ListRecordFragment"
        tools:listitem="@layout/fragment_listrecord">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>